--- a/md/SIBI/app/src/main/res/values/strings.xml
+++ b/md/SIBI/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="background">Background</string>
+    <string name="global_rank">Global Rank</string>
+    <string name="record">My Record</string>
 </resources>
